generating docs tests removed - new version will be implemented